Fri Apr 28 17:38:40 1995  Mark Eichin  <eichin@cygnus.com>

	* srv_net.c: include <signal.h>.

Fri Apr 28 16:38:18 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_output.c	- slight cleanup to allow output_lang_supported()
			  to function correctly.


Fri Apr 28 10:13:21 EDT 1995	Paul Park	(pjpark@mit.edu)
	Add new library libkadm. 
	* configure.in	- Check for presence of vsprintf.
	* passwd.c	- Use size_t for sizes.
	* proto_serv.c	- Allow for case-insensitivity of commands.
			- Remove socket-dependent includes and add NEED_SOCKETS
	* srv_key.c	- Use size_t for sizes.
	* srv_main.c	- Check for presence of vsprintf.
	* srv_net.c	- Remove socket-dependent includes and add NEED_SOCKETS
			- Use size_t for sizes.
			- Return success if bind succeeds.
	* srv_output.c	- Add language name recoginition.

Fri Apr 28 13:06:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* srv_net.c: Linux doesn't have SOMAXCONN, assume 5 if not defined.

Fri Apr 28 07:32:55 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* configure.in: Add check for -ldbm and -lndbm.

Thu Apr 27 17:05:54 EDT 1995	Paul Park	(pjpark@mit.edu)

	Update last_pwd_change, mod_name and kvno when changing password
	successfully.

Wed Apr 26 16:00:00 EDT 1995	Paul Park	(pjpark@mit.edu)

	Add new administrative protocol server which only responds to
	password requests for now.
