@@ -1,6 +1,9 @@
-Fri Apr 28 17:38:40 1995  Mark Eichin  <eichin@cygnus.com>
 
-	* srv_net.c: include <signal.h>.
+Fri Apr 28 17:38:36 EDT 1995	Paul Park	(pjpark@mit.edu)
+
+	* srv_net.c, proto_serv.c - re-include <signal.h> for signal name
+		definitions.  Removal of them was over-zealous.
+
 
 Fri Apr 28 16:38:18 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* srv_output.c	- slight cleanup to allow output_lang_supported()
